--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,9 +74,9 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Test mcp-bundle-reddit-research
-        if: hashFiles('mcp-bundle-reddit-research/package.json') != ''
-        working-directory: ./mcp-bundle-reddit-research
+      - name: Test mcp-reddit-research
+        if: hashFiles('mcp-reddit-research/package.json') != ''
+        working-directory: ./mcp-reddit-research
         env:
           ANONYMIZATION_SALT: test-salt-for-ci-only
         run: |
