--- a/mcp-reddit-research/package.json
+++ b/mcp-reddit-research/package.json
@@ -28,7 +28,7 @@
     "health-communication"
   ],
   "author": "samuel.harrold@gmail.com",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "@modelcontextprotocol/sdk": "0.5.0",
     "snoowrap": "^1.23.0",
