--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
     "click>=8.1.0",
     "httpx>=0.27.0",
     "duckdb>=1.4.2",
+    "streamlit>=1.41.0",
+    "mcp>=1.1.2",
+    "google-genai>=0.3.0",
+    "praw>=7.7.1",
 ]
 
 [tool.pytest.ini_options]
